fix: adding follow us on footer should be with less margin and icon smaller

--- a/src/components/FollowUs.module.css
+++ b/src/components/FollowUs.module.css
@@ -14,5 +14,5 @@
   @apply text-white mx-4 text-xl;
 }
 .iconDashboard {
-  @apply mx-2;
+  @apply mx-1;
 }
